# hypermodern-python

./: .coverage  .flake8  LICENSE  README.md  coverage.xml  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: test-pypi.yml  tests.yml
docs/: conf.py
docs/_build/: .buildinfo  genindex.html  index.html  license.html  py-modindex.html  reference.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree  license.doctree  reference.doctree
src/hypermodern_python/: __init__.py  console.py  wikipedia.py
tests/: test_console.py  test_wikipedia.py
