[tool.poetry]
name = "hypermodern-python"
version = "0.2.0"
description = "The hypermodern Python project"
authors = ["JayDiehl <Jay.Diehl@outlook.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/JayDiehl/hypermodern-python"
repository = "https://github.com/JayDiehl/hypermodern-python"
keywords = ["hypermodern"]
documentation = "https://hypermodern-python.readthedocs.io"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0"
requests = "^2.31.0"
desert = "^2022.9.22"
marshmallow = "^3.21.1"
importlib-metadata = {version = "^7.1.0", python = "<3.9"}

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"
coverage = {extras = ["toml"], version = "^7.4.4"}
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
black = "^24.3.0"
flake8 = "^7.0.0"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^24.2.6"
flake8-import-order = "^0.18.2"
mypy = "^1.9.0"
pytype = {version = "^2024.4.11", python = "3.7"}
typeguard = "^4.2.1"
flake8-annotations = "^3.0.1"
flake8-docstrings = "^1.7.0"
darglint = "^1.8.1"
xdoctest = "^1.1.3"
Sphinx = "^7.3.6"
sphinx-autodoc-typehints = "^2.1.0"
codecov = "^2.1.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hypermodern-python = "hypermodern_python.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hypermodern_python"]

[tool.coverage.report]
show_missing = true
fail_under = 100
